// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snapshot defaults 1`] = `
<div>
  <div
    class="react-select__select-container react-select__select-container--styled"
    data-is-disabled="false"
    data-is-rtl="false"
  >
    <span
      class="react-select__a11y-text"
      id="react-select-:r0:-live-region"
    />
    <span
      aria-atomic="false"
      aria-live="polite"
      aria-relevant="additions text"
      class="react-select__a11y-text"
      role="log"
    />
    <div
      class="react-select__control react-select__control--styled"
      data-is-disabled="false"
      data-is-focused="false"
    >
      <div
        class="react-select__value-container react-select__value-container--styled"
        style="--rs-container-display: grid;"
      >
        <div
          class="react-select__placeholder react-select__placeholder--styled"
          id="react-select-:r0:-placeholder"
        >
          Select...
        </div>
        <div
          class="react-select__input react-select__input--styled"
          data-value=""
        >
          <input
            aria-autocomplete="list"
            aria-describedby="react-select-:r0:-placeholder"
            aria-expanded="false"
            aria-haspopup="true"
            autocapitalize="none"
            autocomplete="off"
            autocorrect="off"
            class="react-select__hidden-input"
            id="react-select-:r0:-input"
            role="combobox"
            spellcheck="false"
            style="opacity: 1;"
            tabindex="0"
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        class="react-select__indicators-container react-select__indicators-container--styled"
      >
        <span
          class="react-select__indicator-separator react-select__indicator-separator--styled"
          data-is-disabled="false"
        />
        <div
          aria-hidden="true"
          class="react-select__dropdown-indicator react-select__dropdown-indicator--styled"
          data-is-focused="false"
        >
          <svg
            aria-hidden="true"
            class="react-select__down-chevron react-select__down-chevron--styled"
            focusable="false"
            height="20"
            viewBox="0 0 20 20"
            width="20"
          >
            <path
              d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`snapshot with menu open 1`] = `
<div>
  <div
    class="react-select__select-container react-select__select-container--styled"
    data-is-disabled="false"
    data-is-rtl="false"
  >
    <span
      class="react-select__a11y-text"
      id="react-select-:r1:-live-region"
    />
    <span
      aria-atomic="false"
      aria-live="polite"
      aria-relevant="additions text"
      class="react-select__a11y-text"
      role="log"
    />
    <div
      class="react-select__control react-select__control--styled"
      data-is-disabled="false"
      data-is-focused="false"
    >
      <div
        class="react-select__value-container react-select__value-container--styled"
        style="--rs-container-display: grid;"
      >
        <div
          class="react-select__placeholder react-select__placeholder--styled"
          id="react-select-:r1:-placeholder"
        >
          Select...
        </div>
        <div
          class="react-select__input react-select__input--styled"
          data-value=""
        >
          <input
            aria-autocomplete="list"
            aria-controls="react-select-:r1:-listbox"
            aria-describedby="react-select-:r1:-placeholder"
            aria-expanded="true"
            aria-haspopup="true"
            autocapitalize="none"
            autocomplete="off"
            autocorrect="off"
            class="react-select__hidden-input"
            id="react-select-:r1:-input"
            role="combobox"
            spellcheck="false"
            style="opacity: 1;"
            tabindex="0"
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        class="react-select__indicators-container react-select__indicators-container--styled"
      >
        <span
          class="react-select__indicator-separator react-select__indicator-separator--styled"
          data-is-disabled="false"
        />
        <div
          aria-hidden="true"
          class="react-select__dropdown-indicator react-select__dropdown-indicator--styled"
          data-is-focused="false"
        >
          <svg
            aria-hidden="true"
            class="react-select__down-chevron react-select__down-chevron--styled"
            focusable="false"
            height="20"
            viewBox="0 0 20 20"
            width="20"
          >
            <path
              d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      class="react-select__menu react-select__menu--styled"
      style="top: 100%;"
    >
      <div
        aria-multiselectable="false"
        class="react-select__menu-list react-select__menu-list--styled"
        id="react-select-:r1:-listbox"
        role="listbox"
        style="--rs-menu-list-max-height: 300px;"
      >
        <div
          aria-disabled="false"
          aria-selected="false"
          class="react-select__option react-select__option--styled"
          data-is-deselectable="true"
          data-is-disabled="false"
          data-is-focused="false"
          data-is-selected="false"
          id="react-select-:r1:-option-0"
          role="option"
          tabindex="-1"
        >
          0
        </div>
        <div
          aria-disabled="false"
          aria-selected="false"
          class="react-select__option react-select__option--styled"
          data-is-deselectable="true"
          data-is-disabled="false"
          data-is-focused="false"
          data-is-selected="false"
          id="react-select-:r1:-option-1"
          role="option"
          tabindex="-1"
        >
          1
        </div>
        <div
          aria-disabled="false"
          aria-selected="false"
          class="react-select__option react-select__option--styled"
          data-is-deselectable="true"
          data-is-disabled="false"
          data-is-focused="false"
          data-is-selected="false"
          id="react-select-:r1:-option-2"
          role="option"
          tabindex="-1"
        >
          2
        </div>
        <div
          aria-disabled="false"
          aria-selected="false"
          class="react-select__option react-select__option--styled"
          data-is-deselectable="true"
          data-is-disabled="false"
          data-is-focused="false"
          data-is-selected="false"
          id="react-select-:r1:-option-3"
          role="option"
          tabindex="-1"
        >
          3
        </div>
        <div
          aria-disabled="false"
          aria-selected="false"
          class="react-select__option react-select__option--styled"
          data-is-deselectable="true"
          data-is-disabled="false"
          data-is-focused="false"
          data-is-selected="false"
          id="react-select-:r1:-option-4"
          role="option"
          tabindex="-1"
        >
          4
        </div>
        <div
          aria-disabled="false"
          aria-selected="false"
          class="react-select__option react-select__option--styled"
          data-is-deselectable="true"
          data-is-disabled="false"
          data-is-focused="false"
          data-is-selected="false"
          id="react-select-:r1:-option-5"
          role="option"
          tabindex="-1"
        >
          5
        </div>
        <div
          aria-disabled="false"
          aria-selected="false"
          class="react-select__option react-select__option--styled"
          data-is-deselectable="true"
          data-is-disabled="false"
          data-is-focused="false"
          data-is-selected="false"
          id="react-select-:r1:-option-6"
          role="option"
          tabindex="-1"
        >
          6
        </div>
        <div
          aria-disabled="false"
          aria-selected="false"
          class="react-select__option react-select__option--styled"
          data-is-deselectable="true"
          data-is-disabled="false"
          data-is-focused="false"
          data-is-selected="false"
          id="react-select-:r1:-option-7"
          role="option"
          tabindex="-1"
        >
          7
        </div>
        <div
          aria-disabled="false"
          aria-selected="false"
          class="react-select__option react-select__option--styled"
          data-is-deselectable="true"
          data-is-disabled="false"
          data-is-focused="false"
          data-is-selected="false"
          id="react-select-:r1:-option-8"
          role="option"
          tabindex="-1"
        >
          8
        </div>
        <div
          aria-disabled="false"
          aria-selected="false"
          class="react-select__option react-select__option--styled"
          data-is-deselectable="true"
          data-is-disabled="false"
          data-is-focused="false"
          data-is-selected="false"
          id="react-select-:r1:-option-9"
          role="option"
          tabindex="-1"
        >
          9
        </div>
        <div
          aria-disabled="false"
          aria-selected="false"
          class="react-select__option react-select__option--styled"
          data-is-deselectable="true"
          data-is-disabled="false"
          data-is-focused="false"
          data-is-selected="false"
          id="react-select-:r1:-option-10"
          role="option"
          tabindex="-1"
        >
          10
        </div>
        <div
          aria-disabled="false"
          aria-selected="false"
          class="react-select__option react-select__option--styled"
          data-is-deselectable="true"
          data-is-disabled="false"
          data-is-focused="false"
          data-is-selected="false"
          id="react-select-:r1:-option-11"
          role="option"
          tabindex="-1"
        >
          11
        </div>
        <div
          aria-disabled="false"
          aria-selected="false"
          class="react-select__option react-select__option--styled"
          data-is-deselectable="true"
          data-is-disabled="false"
          data-is-focused="false"
          data-is-selected="false"
          id="react-select-:r1:-option-12"
          role="option"
          tabindex="-1"
        >
          12
        </div>
        <div
          aria-disabled="false"
          aria-selected="false"
          class="react-select__option react-select__option--styled"
          data-is-deselectable="true"
          data-is-disabled="false"
          data-is-focused="false"
          data-is-selected="false"
          id="react-select-:r1:-option-13"
          role="option"
          tabindex="-1"
        >
          13
        </div>
        <div
          aria-disabled="false"
          aria-selected="false"
          class="react-select__option react-select__option--styled"
          data-is-deselectable="true"
          data-is-disabled="false"
          data-is-focused="false"
          data-is-selected="false"
          id="react-select-:r1:-option-14"
          role="option"
          tabindex="-1"
        >
          14
        </div>
        <div
          aria-disabled="false"
          aria-selected="false"
          class="react-select__option react-select__option--styled"
          data-is-deselectable="true"
          data-is-disabled="false"
          data-is-focused="false"
          data-is-selected="false"
          id="react-select-:r1:-option-15"
          role="option"
          tabindex="-1"
        >
          15
        </div>
        <div
          aria-disabled="false"
          aria-selected="false"
          class="react-select__option react-select__option--styled"
          data-is-deselectable="true"
          data-is-disabled="false"
          data-is-focused="false"
          data-is-selected="false"
          id="react-select-:r1:-option-16"
          role="option"
          tabindex="-1"
        >
          16
        </div>
      </div>
    </div>
  </div>
</div>
`;
